; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/dev/acpica/components/debugger/extr_dbdisply.c_AcpiDbDisplayArgumentObject.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/dev/acpica/components/debugger/extr_dbdisply.c_AcpiDbDisplayArgumentObject.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AcpiGbl_DbThreadId = common dso_local global i64 0, align 8
@AcpiGbl_CmSingleStep = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c"ArgObj:    \00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @AcpiDbDisplayArgumentObject(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i64, i64* @AcpiGbl_DbThreadId, align 8
  %6 = call i64 (...) @AcpiOsGetThreadId()
  %7 = icmp ne i64 %5, %6
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  br label %18

9:                                                ; preds = %2
  %10 = load i32, i32* @AcpiGbl_CmSingleStep, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %9
  br label %18

13:                                               ; preds = %9
  %14 = call i32 @AcpiOsPrintf(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %15 = load i32*, i32** %3, align 8
  %16 = load i32*, i32** %4, align 8
  %17 = call i32 @AcpiDbDisplayInternalObject(i32* %15, i32* %16)
  br label %18

18:                                               ; preds = %13, %12, %8
  ret void
}

declare dso_local i64 @AcpiOsGetThreadId(...) #1

declare dso_local i32 @AcpiOsPrintf(i8*) #1

declare dso_local i32 @AcpiDbDisplayInternalObject(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
